# Epitech-Rtype

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  linux_compil.sh  windows_compil.bat
Client/: CMakeLists.txt
Client/includes/: CommonIncludes.hpp  MainInclusdes.hpp
Client/sources/: main.cpp
Client/sources/games/: Builder.cpp  Game.cpp  Game.hpp  Updates.cpp
Client/sources/games/scenes/: DrawLoginScene.cpp  SystemLoginScene.cpp  systemMenu.cpp
Client/sources/games/scenes/career/: Career.cpp  Career.hpp  History.cpp  History.hpp
Client/sources/games/scenes/collection/: Collection.cpp  Collection.hpp
Client/sources/games/scenes/gameScene/: GameLogic.cpp  GameLogic.hpp  GameScene.cpp  GameScene.hpp
Client/sources/games/scenes/loadingscene/: Loading.cpp  Loading.hpp
Client/sources/games/scenes/lobby/: List.cpp  List.hpp  Lobby.cpp  Lobby.hpp
Client/sources/games/scenes/login/: Login.cpp  Login.hpp
Client/sources/games/scenes/resultScene/: resultScene.cpp  resultScene.hpp
Client/sources/games/scenes/settings/: ASettings.cpp  ASettings.hpp  AudioSettings.cpp  AudioSettings.hpp  ContainerSettings.hpp  ControlsSettings.cpp  ControlsSettings.hpp  Draws.cpp  ISettings.hpp  MouseSettings.cpp  MouseSettings.hpp  ProfilSettings.cpp  ProfilSettings.hpp  VideoSettings.cpp  (+1 more)
Client/sources/games/soundManager/: soundManager.cpp  soundManager.hpp
Client/sources/games/teamContainer/: Player.cpp  Player.hpp  TeamContainer.cpp  TeamContainer.hpp
Client/sources/net/: ClientToGame.cpp  ClientToGame.hpp  ClientToServer.cpp  ClientToServer.hpp
ECS/: ECS.hpp  (+6 more)
(+103 files in other folders)
